telepathy-gabble (0.16.0-1) UNRELEASED; urgency=low

  * Merge from Ubuntu
  * Delete all unwanted .la files from plugins
  * List all uninstalled files
  * Don't waste time building static libraries - the only use of libraries
    in this package is for plugins, which have to be dynamic

 -- Simon McVittie <smcv@debian.org>  Wed, 04 Apr 2012 16:52:35 +0100

telepathy-gabble (0.16.0-0ubuntu1) precise; urgency=low

  * New upstream release.
    - Correctly convert between Telepathy and Jingle candidate types
    - Start sending automatically on accepting bidirectional calls.
  * debian/control
    - bump build depends for libtelepathy-glib-dev to >= 0.18.0
  * debian/rules
    - no longer strip -Bsymbolic-function from LDFLAGS, bug has been fixed 
      upstream

 -- Ken VanDine <ken.vandine@canonical.com>  Tue, 03 Apr 2012 11:54:00 -0400

telepathy-gabble (0.15.4-1ubuntu1) precise; urgency=low

  * Merge with Debian experimental. Remaining Ubuntu changes:
    - debian/telepathy-gabble.install: Install telepathy-gabble-xmpp-console.
  * debian/rules
    - strip -Bsymbolic-function from LDFLAGS, causes a crash on 
      start https://bugs.freedesktop.org/show_bug.cgi?id=46417

 -- Ken VanDine <ken.vandine@canonical.com>  Mon, 05 Mar 2012 16:51:45 -0500

telepathy-gabble (0.15.4-1) experimental; urgency=low

  * New upstream release
    - increase telepathy-glib build-dependency
    - install libgabble-plugins.so, now needed by Gabble and its plugins
      (it should really be versioned with -release since it's not
      public/stable; to be fixed in a future Gabble)

 -- Simon McVittie <smcv@debian.org>  Tue, 21 Feb 2012 21:38:52 +0000

telepathy-gabble (0.15.3-1ubuntu1) precise; urgency=low

  * Merge with Debian experimental. Remaining Ubuntu changes:
    - debian/telepathy-gabble.install: Install telepathy-gabble-xmpp-console.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 08 Feb 2012 09:32:43 +0100

telepathy-gabble (0.15.3-1) experimental; urgency=low
