@@ -5,6 +5,7 @@ telepathy-gabble (0.16.0-1) UNRELEASED; urgency=low
   * List all uninstalled files
   * Don't waste time building static libraries - the only use of libraries
     in this package is for plugins, which have to be dynamic
+  * Simplify how we get parallel builds
 
  -- Simon McVittie <smcv@debian.org>  Wed, 04 Apr 2012 16:52:35 +0100
 
